Updated Translations from Crowdin

--- a/src/main/resources/assets/ae2/lang/ru_ru.json
+++ b/src/main/resources/assets/ae2/lang/ru_ru.json
@@ -53,21 +53,44 @@
   "achievement.ae2.StorageCell.desc": "Изготовь камеру хранения",
   "ae2.permission_denied": "У тебя нет разрешения для доступа к этому.",
   "ae2.rei_jei_integration.budding_quartz_creation_and_worldgen": "Формирующийся кварц можно найти в метеоритах или регенерировать с помощью заряженного кварца в воде.",
-  "ae2.rei_jei_integration.budding_quartz_decays_when_broken": "Формирующийся кварц распадается на кварц при разрушении.",
+  "ae2.rei_jei_integration.budding_quartz_decays_when_broken": "Кварц распадается при разрушении.",
+  "ae2.rei_jei_integration.buds_drop_dust_when_not_fully_grown": "Из кварцевого бутона выпадает пыль, если он не вырос полностью.",
+  "ae2.rei_jei_integration.certus_quartz_growth": "Рост истинного кварца",
+  "ae2.rei_jei_integration.charger_required_power": "%d поворотов или %d AE",
+  "ae2.rei_jei_integration.consumed": "Израсходовано",
+  "ae2.rei_jei_integration.crank_description": "Подсоедините рукоятку к зарядному устройству, чтобы запитать его вручную.",
+  "ae2.rei_jei_integration.crystal_growth_accelerators_effect": "Ускорители роста кристаллов ускоряют рост соседних почкующихся кварцев.",
   "ae2.rei_jei_integration.ctrl_click_to_craft": "CTRL + клик для создания недоступных предметов",
+  "ae2.rei_jei_integration.decay_chance": "Вероятность %d%%",
   "ae2.rei_jei_integration.encode_pattern": "Закодировать шаблон",
   "ae2.rei_jei_integration.entropy_manipulator_cool": "Охлаждение (%d AE)",
   "ae2.rei_jei_integration.entropy_manipulator_heat": "Нагрев (%d AE)",
   "ae2.rei_jei_integration.explosion": "Взрыв",
+  "ae2.rei_jei_integration.flawless_budding_quartz_description": "Безупречный почкующийся кварц никогда не распадается при росте почек. Его можно найти только в метеоритах.",
+  "ae2.rei_jei_integration.flowing_fluid_name": "%с (течёт)",
+  "ae2.rei_jei_integration.fortune_applies": "Применяется зачарование Удачи",
+  "ae2.rei_jei_integration.fully_grown_buds_drop_crystals": "Полностью выросший бутон кварца роняет кристаллы.",
+  "ae2.rei_jei_integration.has_encoded_ingredients": "Выделенные элементы уже возможно создать",
+  "ae2.rei_jei_integration.imperfect_budding_quartz_decays": "Несовершенный бутонизирующий кварц имеет шанс распада при росте бутонов.",
   "ae2.rei_jei_integration.incompatible_recipe": "Несовместимый рецепт",
   "ae2.rei_jei_integration.missing_id": "Невозможно распознать рецепт.",
   "ae2.rei_jei_integration.missing_items": "Отсутствующие предметы будут пропущены.",
+  "ae2.rei_jei_integration.move_items": "Переместить предметы",
   "ae2.rei_jei_integration.no_items": "Совместимых предметов не найдено",
   "ae2.rei_jei_integration.no_output": "Рецепт не имеет выхода",
+  "ae2.rei_jei_integration.p2p_api_attunement": "Связать с любым:",
+  "ae2.rei_jei_integration.p2p_tag_attunement": "Связать с любым показанным предметом",
+  "ae2.rei_jei_integration.p2p_tunnel_attunement": "Настройка туннеля P2P",
+  "ae2.rei_jei_integration.quartz_buds_grow_on_budding_quartz": "Кварцевые почки растут на почкующемся кварце.",
   "ae2.rei_jei_integration.recipe_too_large": "Рецепт намного больше, чем 3x3",
   "ae2.rei_jei_integration.requires_processing_mode": "Требуется режим обработки",
   "ae2.rei_jei_integration.right_click": "Нажмите ПКМ",
   "ae2.rei_jei_integration.shift_right_click": "Shift+ПКМ",
+  "ae2.rei_jei_integration.silk_touch_prevents_decay_for_imperfect": "Шелковое касание предотвращает гниение для несовершенного распускающегося кварца.",
+  "ae2.rei_jei_integration.spatial_io_never_causes_any_decay": "Пространственный ввод/вывод никогда не вызывает затухания.",
+  "ae2.rei_jei_integration.submerge_in": "Опустить в",
+  "ae2.rei_jei_integration.transform_category": "Преобразование в мире",
+  "biome.ae2.spatial_storage": "Пространственное хранилище",
   "block.ae2.16k_crafting_storage": "Хранилище для изготовления на 16К",
   "block.ae2.1k_crafting_storage": "Хранилище для изготовления на 1К",
   "block.ae2.256k_crafting_storage": "Хранилище для изготовления на 16К",
@@ -106,10 +129,18 @@
   "block.ae2.light_detector": "Осветительная арматура обнаружения света",
   "block.ae2.matrix_frame": "Каркас матрицы",
   "block.ae2.molecular_assembler": "Молекулярный сборщик",
+  "block.ae2.mysterious_cube": "Таинственный куб",
+  "block.ae2.not_so_mysterious_cube": "Не очень таинственный куб",
+  "block.ae2.paint": "Краска",
   "block.ae2.pattern_provider": "МЭ поставщик шаблонов",
   "block.ae2.quantum_link": "МЭ камера квантовой связи",
   "block.ae2.quantum_ring": "МЭ квантовое кольцо",
   "block.ae2.quartz_block": "Блок истинного кварца",
+  "block.ae2.quartz_brick_slab": "Кирпичная плита из истинного кварца",
+  "block.ae2.quartz_brick_stairs": "Кирпичные ступени из истинного кварца",
+  "block.ae2.quartz_brick_wall": "Кирпичная стена из истинного кварца",
+  "block.ae2.quartz_bricks": "Кирпичи из истинного кварца",
+  "block.ae2.quartz_cluster": "Кластер истинного кварца",
   "block.ae2.quartz_fixture": "Арматура из заряженного кварца",
   "block.ae2.quartz_glass": "Кварцевое стекло",
   "block.ae2.quartz_growth_accelerator": "Ускоритель роста кристалла",
@@ -134,7 +165,11 @@
   "block.ae2.sky_stone_small_brick_stairs": "Ступени из малого кирпича небесного камня",
   "block.ae2.sky_stone_small_brick_wall": "Стена из малого кирпича небесного камня",
   "block.ae2.sky_stone_stairs": "Ступени из небесного камня",
+  "block.ae2.sky_stone_tank": "Бак из небесного камня",
   "block.ae2.sky_stone_wall": "Стена из небесного камня",
+  "block.ae2.smooth_quartz_block": "Гладкий блок истинного кварца",
+  "block.ae2.smooth_quartz_slab": "Гладкие плиты из истинного кварца",
+  "block.ae2.smooth_quartz_stairs": "Гладкие ступени из истинного кварца",
   "block.ae2.smooth_quartz_wall": "Резная стена из истинного кварца",
   "block.ae2.smooth_sky_stone_block": "Блок небесного камня",
   "block.ae2.smooth_sky_stone_chest": "Сундук из блока небесного камня",
@@ -148,11 +183,13 @@
   "block.ae2.vibration_chamber": "Резонирующая камера",
   "block.ae2.wireless_access_point": "МЭ беспроводная точка доступа",
   "chat.ae2.AmmoDepleted": "Боеприпасы исчерпаны.",
+  "chat.ae2.ChannelModeCurrent": "Текущий режим канала: %с",
   "chat.ae2.ChannelModeSet": "Режим канала установлен на %s. Обновлено %d сеток.",
   "chat.ae2.ChestCannotReadStorageCell": "МЭ-сундук не может прочитать камеру хранения.",
   "chat.ae2.ClickToShowDetails": "Нажмите, чтобы просмотреть детали",
   "chat.ae2.ClickToTeleport": "Нажмите, чтобы телепортироваться на участок",
   "chat.ae2.CommunicationError": "Ошибка связи с сетью.",
+  "chat.ae2.CompassTestSection": "Выделение [y=%d-%d] %d: %b",
   "chat.ae2.DeviceNotLinked": "Устройство не сопряжено.",
   "chat.ae2.DeviceNotPowered": "У устройства мало энергии.",
   "chat.ae2.LoadedSettings": "Из карты памяти выгружена конфигурация устройства.",
@@ -163,6 +200,7 @@
   "chat.ae2.NotInSpatialStorageLevel": "Должно быть в пределах уровня пространственного хранения.",
   "chat.ae2.NotStorageCell": "Элементы ячейки хранения не реализуют интерфейс ячейки хранения!",
   "chat.ae2.OnlyEmptyCellsCanBeDisassembled": "Разбирать можно только пустые ячейки.",
+  "chat.ae2.Origin": "Источник",
   "chat.ae2.OutOfRange": "Беспроводная сеть вне досягаемости.",
   "chat.ae2.Owner": "Владелец",
   "chat.ae2.PlayerConnected": "%s [Подключен]",
@@ -206,6 +244,7 @@
   "config.jade.plugin_ae2.pattern_provider": "МЭ поставщик шаблонов",
   "gui.ae2.And": "и",
   "gui.ae2.AttachedTo": "Присоединён с: %s",
+  "gui.ae2.AutoCrafting": "Авто-Крафт",
   "gui.ae2.Automatic": "Автоматически",
   "gui.ae2.Black": "Чёрный",
   "gui.ae2.Blank": "Пустой",
@@ -214,6 +253,7 @@
   "gui.ae2.BytesUsed": "Использовано %s байт.",
   "gui.ae2.CPUs": "ЦП",
   "gui.ae2.CalculatingWait": "Вычисление... подожди...",
+  "gui.ae2.CanBeEnchanted": "Можно зачаровать",
   "gui.ae2.Cancel": "Отмена",
   "gui.ae2.CellWorkbench": "Верстак для камер",
   "gui.ae2.Chest": "МЭ-сундук",
@@ -227,8 +267,17 @@
   "gui.ae2.CopyMode": "Режим копирования",
   "gui.ae2.CopyModeDesc": "Контролирует, очищено ли содержимое панели конфигурации, если твоё хранилище убрано.",
   "gui.ae2.CraftErrorCpuOffline": "Выбранный CPU отключен.",
+  "gui.ae2.CraftErrorNoCpuFound": "В сети нет ЦП создания.",
+  "gui.ae2.CraftErrorNoSuitableCpuBusy": "%d занят",
+  "gui.ae2.CraftErrorNoSuitableCpuExcluded": "%d исключено",
+  "gui.ae2.CraftErrorNoSuitableCpuOffline": "%d офлайн",
+  "gui.ae2.CraftErrorNoSuitableCpuTooSmall": "%d слишком мал",
   "gui.ae2.Crafting": "Изготовление: %s",
+  "gui.ae2.CraftingCPUs": "ЦП изготовления",
   "gui.ae2.CraftingInterface": "МЭ поставщик шаблона",
+  "gui.ae2.CraftingLockIsLocked": "Создание заблокировано",
+  "gui.ae2.CraftingLockIsUnlocked": "Создание разблокировано",
+  "gui.ae2.CraftingPattern": "Шаблоны крафта",
   "gui.ae2.CraftingPlan": "План изготовления - %s",
   "gui.ae2.CraftingStatus": "Статус изготовления",
   "gui.ae2.CraftingTerminal": "Терминал изготовления",
@@ -291,6 +340,8 @@
   "gui.ae2.NoPermissions": "Нет выбранных прав",
   "gui.ae2.NoSecondOutput": "Нет вторичного выхода",
   "gui.ae2.Nothing": "Ничего",
+  "gui.ae2.NumberGreaterThanMaxValue": "Укажите число, меньше или равное %s",
+  "gui.ae2.NumberLessThanMinValue": "Введите число большее или равное %s",
   "gui.ae2.NumberNonInteger": "Должно быть целым числом",
   "gui.ae2.OCTunnel": "OpenComputers",
   "gui.ae2.Of": "из",
@@ -742,22 +793,6 @@
   "item.ae2.matter_cannon": "Материальная пушка",
   "item.ae2.me_p2p_tunnel": "МЭ P2P тоннель",
   "item.ae2.memory_card": "Карта памяти",
-  "item.ae2.memory_card_black": "Черная карта памяти",
-  "item.ae2.memory_card_blue": "Синяя карта памяти",
-  "item.ae2.memory_card_brown": "Коричневая карта памяти",
-  "item.ae2.memory_card_cyan": "Бирюзовая карта памяти",
-  "item.ae2.memory_card_gray": "Серая карта памяти",
-  "item.ae2.memory_card_green": "Зеленая карта памяти",
-  "item.ae2.memory_card_light_blue": "Светло-синяя карта памяти",
-  "item.ae2.memory_card_light_gray": "Светло-серая карта памяти",
-  "item.ae2.memory_card_lime": "Лаймовая карта памяти",
-  "item.ae2.memory_card_magenta": "Пурпурная карта памяти",
-  "item.ae2.memory_card_orange": "Оранжевая карта памяти",
-  "item.ae2.memory_card_pink": "Розовая карта памяти",
-  "item.ae2.memory_card_purple": "Фиолетовая карта памяти",
-  "item.ae2.memory_card_red": "Красная карта памяти",
-  "item.ae2.memory_card_white": "Белая карта памяти",
-  "item.ae2.memory_card_yellow": "Желтая карта памяти",
   "item.ae2.meteorite_compass": "Метеоритный компас",
   "item.ae2.monitor": "Ярко-освещённая панель",
   "item.ae2.name_press": "Именующий печать для вырезателя",
